--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Help Ukraine</title>
-    <link href="/assets/css/main.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/main.css" rel="stylesheet" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 				<div class="container clearfix">
 					
 					<div id="about">
-						<img src="/assets/images/flags.jpg" alt="">
+						<img src="assets/images/flags.jpg" alt="">
 
 						<h1>Help Ukraine</h1>
 						<p>Hi! My name is Ivan. I'm from Ukraine. This country has been on everyone's lips since February 24 due to the blatant attack from russia (I intentionally keep this state and their president not capitalized).</p>
@@ -35,14 +35,14 @@
 						<p>We just want to lead a peacefull life. To work, to raise kids, to travel. We are patriots but definitely not chauvinists.</p>
 						<p>As a majority of Ukrainians, I regularly donate some money to support our defenders. But recently I've got involved in volunteering after my elder brother (Igor, 42) was enrolled to the army.
 						And although we receive aid from our allies, we still have the shortage of many things.</p>
-						<img src="/assets/images/bro.webp" alt="">
+						<img src="assets/images/bro.webp" alt="">
 						<p>A week ago Igor called me and said he is in the need of military essentials including armor vest, special uniform, thermal imager and so on. Unfortunately many soldiers face the necessity to seek this live-saving stuff by themselves.</p>
 						<p>I immediately ran a campaign via Facebook, and this helped me raise funds for four armor vests which are now in the army. 						
-							<img src="/assets/images/armor.webp" alt="">
+							<img src="assets/images/armor.webp" alt="">
 						But we desperately need more. If there's a chance to allocate a thermal imager, it would be a huge support. Even one item is priceless as it can save someone's life.</p>
 						<p>I really hope that our joint efforts will help Ukrainian army earn a victory and kick the enemy out of our territory.</p>
 						<p>I still beleive this nightmare will end soon, and I will have a chance to fullfill my old dream of taking my kids (two boys) to the USA and showing them Block Island. I was lucky to work there as a server assistan back in 2006. I still keep fond memories about that place and people I've met.</p>
-						<img src="/assets/images/pic-one.webp" alt="">
+						<img src="assets/images/pic-one.webp" alt="">
 						<p>Thank you for your attention, <br>
 						Ivan Dyvak</p>
 								
